finding the lowest and heighest salary

--- a/Day_71/main.ipynb
+++ b/Day_71/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4  Business  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "(51, 6)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "50   True  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "49                            31000.0                            96400.0  HASS  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
        "74300.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -948,13 +948,97 @@
        "'Physician Assistant'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_df['Undergraduate Major'][43]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107000.0\n",
+      "Index for the max mid career salary: 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Chemical Engineering'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(clean_df['Mid-Career Median Salary'].max())\n",
+    "print(f\"Index for the max mid career salary: {clean_df['Mid-Career Median Salary'].idxmax()}\")\n",
+    "clean_df['Undergraduate Major'][8]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34000.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Spanish'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(clean_df['Starting Median Salary'].min())\n",
+    "clean_df['Undergraduate Major'].loc[clean_df['Starting Median Salary'].idxmin()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Undergraduate Major                  Education\n",
+       "Starting Median Salary                 34900.0\n",
+       "Mid-Career Median Salary               52000.0\n",
+       "Mid-Career 10th Percentile Salary      29300.0\n",
+       "Mid-Career 90th Percentile Salary     102000.0\n",
+       "Group                                     HASS\n",
+       "Name: 18, dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.loc[clean_df['Mid-Career Median Salary'].idxmin()]"
    ]
   },
   {
