--- a/Day_71/main.ipynb
+++ b/Day_71/main.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -130,13 +130,36 @@
        "(51, 6)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Undergraduate Major', 'Starting Median Salary',\n",
+       "       'Mid-Career Median Salary', 'Mid-Career 10th Percentile Salary',\n",
+       "       'Mid-Career 90th Percentile Salary', 'Group'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -1246,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1278,27 +1301,27 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Economics</td>\n",
-       "      <td>210000.0</td>\n",
+       "      <td>210,000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Finance</td>\n",
-       "      <td>195000.0</td>\n",
+       "      <td>195,000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Chemical Engineering</td>\n",
-       "      <td>194000.0</td>\n",
+       "      <td>194,000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>Math</td>\n",
-       "      <td>183000.0</td>\n",
+       "      <td>183,000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>Physics</td>\n",
-       "      <td>178000.0</td>\n",
+       "      <td>178,000.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1306,14 +1329,14 @@
       ],
       "text/plain": [
        "     Undergraduate Major  Mid-Career 90th Percentile Salary\n",
-       "17             Economics                           210000.0\n",
-       "22               Finance                           195000.0\n",
-       "8   Chemical Engineering                           194000.0\n",
-       "37                  Math                           183000.0\n",
-       "44               Physics                           178000.0"
+       "17             Economics                         210,000.00\n",
+       "22               Finance                         195,000.00\n",
+       "8   Chemical Engineering                         194,000.00\n",
+       "37                  Math                         183,000.00\n",
+       "44               Physics                         178,000.00"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1325,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1357,42 +1380,42 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>Economics</td>\n",
-       "      <td>159400.0</td>\n",
+       "      <td>159,400.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>Finance</td>\n",
-       "      <td>147800.0</td>\n",
+       "      <td>147,800.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>Math</td>\n",
-       "      <td>137800.0</td>\n",
+       "      <td>137,800.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>Marketing</td>\n",
-       "      <td>132900.0</td>\n",
+       "      <td>132,900.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>Philosophy</td>\n",
-       "      <td>132500.0</td>\n",
+       "      <td>132,500.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Undergraduate Major    Spread\n",
-       "17           Economics  159400.0\n",
-       "22             Finance  147800.0\n",
-       "37                Math  137800.0\n",
-       "36           Marketing  132900.0\n",
-       "42          Philosophy  132500.0"
+       "   Undergraduate Major     Spread\n",
+       "17           Economics 159,400.00\n",
+       "22             Finance 147,800.00\n",
+       "37                Math 137,800.00\n",
+       "36           Marketing 132,900.00\n",
+       "42          Philosophy 132,500.00"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,6 +1423,204 @@
    "source": [
     "highest_spread = clean_df.sort_values('Spread', ascending=False)\n",
     "highest_spread[['Undergraduate Major', 'Spread']].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Spread</th>\n",
+       "      <th>Starting Median Salary</th>\n",
+       "      <th>Mid-Career Median Salary</th>\n",
+       "      <th>Mid-Career 10th Percentile Salary</th>\n",
+       "      <th>Mid-Career 90th Percentile Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Business</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HASS</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEM</th>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Undergraduate Major  Spread  Starting Median Salary  \\\n",
+       "Group                                                           \n",
+       "Business                   12      12                      12   \n",
+       "HASS                       22      22                      22   \n",
+       "STEM                       16      16                      16   \n",
+       "\n",
+       "          Mid-Career Median Salary  Mid-Career 10th Percentile Salary  \\\n",
+       "Group                                                                   \n",
+       "Business                        12                                 12   \n",
+       "HASS                            22                                 22   \n",
+       "STEM                            16                                 16   \n",
+       "\n",
+       "          Mid-Career 90th Percentile Salary  \n",
+       "Group                                        \n",
+       "Business                                 12  \n",
+       "HASS                                     22  \n",
+       "STEM                                     16  "
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.groupby('Group').count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Spread</th>\n",
+       "      <th>Starting Median Salary</th>\n",
+       "      <th>Mid-Career Median Salary</th>\n",
+       "      <th>Mid-Career 10th Percentile Salary</th>\n",
+       "      <th>Mid-Career 90th Percentile Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Business</th>\n",
+       "      <td>103,958.33</td>\n",
+       "      <td>44,633.33</td>\n",
+       "      <td>75,083.33</td>\n",
+       "      <td>43,566.67</td>\n",
+       "      <td>147,525.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HASS</th>\n",
+       "      <td>95,218.18</td>\n",
+       "      <td>37,186.36</td>\n",
+       "      <td>62,968.18</td>\n",
+       "      <td>34,145.45</td>\n",
+       "      <td>129,363.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STEM</th>\n",
+       "      <td>101,600.00</td>\n",
+       "      <td>53,862.50</td>\n",
+       "      <td>90,812.50</td>\n",
+       "      <td>56,025.00</td>\n",
+       "      <td>157,625.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Spread  Starting Median Salary  Mid-Career Median Salary  \\\n",
+       "Group                                                                   \n",
+       "Business 103,958.33               44,633.33                 75,083.33   \n",
+       "HASS      95,218.18               37,186.36                 62,968.18   \n",
+       "STEM     101,600.00               53,862.50                 90,812.50   \n",
+       "\n",
+       "          Mid-Career 10th Percentile Salary  Mid-Career 90th Percentile Salary  \n",
+       "Group                                                                           \n",
+       "Business                          43,566.67                         147,525.00  \n",
+       "HASS                              34,145.45                         129,363.64  \n",
+       "STEM                              56,025.00                         157,625.00  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.float_format = '{:,.2f}'.format\n",
+    "clean_df.groupby('Group').mean()"
    ]
   },
   {
